# RNMUpdate

./: .gitignore  LICENSE  README.md  model.xml  pyproject.toml  requirements.txt
data/: enriched_topology.xlsx  initial_topology.xlsx
results/tables/: paired_statistics.csv
rnm/: __init__.py  network.py  ode.py  sbml_export.py  simulation.py  statistics.py  visualization.py
scripts/: export_sbml.py  run_enriched.py  run_initial.py
